# FreeCAD

./: .clang-format  .git-blame-ignore-revs  .gitattributes  BUILD_OSX.md  CMakeLists.txt  appveyor.yml  lgtm.yml
src/Mod/: .gitattributes  CMakeLists.txt
src/Mod/AddonManager/: Addon.py  addonmanager_devmode.py  addonmanager_devmode_add_content.py  addonmanager_devmode_license_selector.py  addonmanager_devmode_licenses_table.py  addonmanager_devmode_people_table.py  addonmanager_devmode_validators.py  addonmanager_macro.py  addonmanager_workers_startup.py  compact_view.py  expanded_view.py  install_to_toolbar.py
src/Mod/Arch/: ArchCommands.py  ArchSchedule.py  InitGui.py  exportIFC.py  importIFC.py
src/Mod/Complete/: Init.py  InitGui.py
src/Mod/Draft/: CMakeLists.txt  Draft.py  DraftFillet.py  DraftGeomUtils.py  DraftGlobal.h  DraftGui.py  DraftLayer.py  DraftTools.py  DraftVecUtils.py  InitGui.py  TestDraft.py  WorkingPlane.py  draft.dox  importAirfoilDAT.py  importDWG.py  importDXF.py  importOCA.py  importSVG.py
src/Mod/Idf/: Idf.py  Init.py
src/Mod/Image/: ImageGlobal.h  Init.py  InitGui.py
src/Mod/Import/: ImportGlobal.h  Init.py  InitGui.py  stepZ.py
src/Mod/JtReader/: InitGui.py
src/Mod/Material/: InitGui.py  Material.py  MaterialEditor.py  importFCMat.py
src/Mod/Measure/: Init.py  MeasureGlobal.h
src/Mod/Mesh/: InitGui.py  MeshGlobal.h
src/Mod/MeshPart/: MeshPartGlobal.h
src/Mod/Part/: Init.py  InitGui.py  PartEnums.py  PartGlobal.h  TestPartApp.py  TestPartGui.py
src/Mod/PartDesign/: CMakeLists.txt  Init.py  InitGui.py  InvoluteGearFeature.py  PartDesignGlobal.h  SprocketFeature.py  TestPartDesignApp.py  TestPartDesignGui.py
src/Mod/Plot/: Plot.py
src/Mod/Points/: Init.py  InitGui.py  PointsGlobal.h
src/Mod/Sandbox/: Init.py  InitGui.py  exportDRAWEXE.py
src/Mod/Show/: Containers.py  DepGraphTools.py  SceneDetail.py  ShowUtils.py  TVObserver.py  (+2 more)
(+3208 files in other folders)
